# Aprof

./: .gitignore  .gitmodules  README.md  pyproject.toml
benchmarks/aprof_injected_ops/: fast_gelu_inject_report.md  manifest.json
benchmarks/aprof_injected_ops/closed_loop/swi_glu/: label_alignment.json  label_alignment.md
benchmarks/aprof_injected_ops/common/: inject_gen_data.py  inject_run.sh
benchmarks/aprof_injected_ops/fast_gelu/baseline/: metadata.json
benchmarks/aprof_injected_ops/fast_gelu/inject_blockdim/: metadata.json
benchmarks/aprof_injected_ops/fast_gelu/inject_dynshape/: metadata.json
benchmarks/aprof_injected_ops/fast_gelu/inject_tail/: metadata.json
benchmarks/aprof_injected_ops/fast_gelu/inject_tilelen_large/: metadata.json  run.sh
benchmarks/aprof_injected_ops/fast_gelu/inject_tilelen_small/: metadata.json  run.sh
benchmarks/cannbench/: manifest.yaml
benchmarks/reference_ops/fast_gelu/: CMakeLists.txt  README.md  metadata.json  run.sh
benchmarks/reference_ops/fast_gelu/op_host/: data_utils.h  fast_gelu.asc
benchmarks/reference_ops/fast_gelu/op_kernel/: fast_gelu_kernel.asc  fast_gelu_tiling.h
benchmarks/reference_ops/fast_gelu/op_kernel/upstream/: README.md  fast_gelu_dag.h
benchmarks/reference_ops/fast_gelu/remote_out/: remote_hw_summary.txt
benchmarks/reference_ops/fast_gelu/scripts/: build_kernel_o.sh  gen_data.py  gen_msprof_bins.py  profile_hw.sh  profile_sim.sh  run_remote.example.py  run_remote.py  run_remote_profile_only.example.py  run_remote_profile_only.py  verify_result.py
benchmarks/reference_ops/reduce_sum/: CMakeLists.txt  README.md  metadata.json  reduce_common_ref.h  run.sh
benchmarks/reference_ops/reduce_sum/docs/: direct_invoke_msprof_sop.md
benchmarks/reference_ops/reduce_sum/op_host/: data_utils.h  reduce_sum.asc
benchmarks/reference_ops/reduce_sum/op_kernel/: reduce_common.h  reduce_sum_kernel.asc  reduce_sum_tiling.h
benchmarks/reference_ops/reduce_sum/scripts/: gen_data.py  verify_result.py
configs/architectures/: ascend910b1.yaml
docs/: adding_msprof_benchmark.md  aprof_architecture_and_msprof_flow.md  fast_gelu_benchmark_params.md  fast_gelu_direct_invoke_workflow.md  fast_gelu_inject_workflow.md  inventory.md  msprof_simulator_setup.md
scripts/: env_cann.sh  link_cannbot_skills.sh  run_closed_loop.py  run_remote_fast_gelu_inject.example.py  run_remote_fast_gelu_inject.py  run_remote_fast_gelu_inject_sim.example.py  run_remote_fast_gelu_inject_sim.py  setup_env.sh
skills/aprof/diagnosis/: SKILL.md
skills/aprof/profiling/: SKILL.md  todo.md
src/aprof/: __init__.py  __main__.py
src/aprof/agents/: __init__.py
src/aprof/benchmarks/: __init__.py  cannbench_adapter.py  closed_loop.py  models.py  registry.py
src/aprof/cli/: __init__.py  main.py
src/aprof/core/: __init__.py  errors.py  models.py  paths.py
src/aprof/integrations/: __init__.py  cannbot.py
src/aprof/metrics/: __init__.py  architecture.py  contracts.py
src/aprof/profiling/: __init__.py  case_io.py  msprof.py  skills.py
src/aprof/skills/: __init__.py
tests/unit/: test_architecture.py  test_benchmark_registry.py  test_cannbot_integration.py  test_cli_smoke.py  test_diagnosis_rules.py  test_profiling_strategy.py
(+79 files in other folders)
